# SolheimStudios

./: CMakeLists.txt  README.md
ProjectTemplate/: CMakeLists.txt
ProjectTemplate/engine/: Application.cpp  Application.h  BatchRenderer.cpp  BatchRenderer.h  Box.h  Engine.cpp  Engine.h  FlyCamera.cpp  FlyCamera.h  Frustum.cpp  Frustum.h  InputManager.cpp  InputManager.h  LODSystem.h  OcclusionCulling.cpp  OcclusionCulling.h  Octree.cpp  Octree.h  Renderer.h  Scene.cpp  Scene.h
ProjectTemplate/src/: main.cpp
cmake/: Linux.cmake  Windows.cmake  macOS.cmake
docs/: DEVLOG.md  DOCUMENTATION.md  HAND-GUIDE.md  PERFORMANCELOG.md
documentation/: DEVLOG.md  ROADMAP.md
engine/components/: FlyCamera.cpp  FlyCamera.h
engine/core/: Application.h  Engine.h  InputManager.cpp  InputManager.h
engine/graphics/: BatchRenderer.cpp  BatchRenderer.h  Frustum.h  Renderer.cpp  Renderer.h
engine/scene/: Octree.cpp  Octree.h  Scene.cpp  Scene.h
engine/systems/: LODSystem.cpp  LODSystem.h
scripts/: install-linux.sh  install-macos.sh  install-windows.ps1
src/: ProjectCreator.cpp  ProjectCreator.h  main.cpp
